--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h2 class="grande "> proyecto</h2>
             <div class="row">
               <div class="col-12 mt-3 mr-5">
-               <p class="fs-5 text-white text-start">
+               <p class=" text-white text-start">
               Una web única, un blog corporativo, una tienda online, unas
               tarjetas, el diseño de un dossier, un catálogo, un menú, el perfil
               de facebook, un feed atractivo... tenemos miles de soluciones para
@@ -106,15 +106,14 @@
           <div class="col-8 mt-5 text-center marginadjust">
             <h6 class="mb-3 text-center">DISEÑO WEB</h6>
             <p class="text-center">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
-              excepturi?
+             Llevamos a cabo proyectos web que funcionan gracias a un diseño, una progamción perfecta y una comunicación potente.
             </p>
           </div>
         </div>
         <div class="col-md-2 icons mt-5 marginadjust text-center">
           <img src="/assets/Pagina web-06.png" alt="" />
           <div class="col-md-8 mt-5 marginadjust">
-            <h6 class="mb-3">DISEÑO WEB</h6>
+            <h6 class="mb-3">DISEÑO ESPECIAL</h6>
             <p class="text-center">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
               excepturi?
@@ -124,7 +123,7 @@
         <div class="col-md-2 icons mx-auto mt-5 marginadjust text-center">
           <img src="/assets/Pagina web-07.png" alt="" />
           <div class="col-8 mt-5 marginadjust">
-            <h6 class="mb-3 text-center">DISEÑO WEB</h6>
+            <h6 class="mb-3 text-center">DISEÑO LOGOTIPOS</h6>
             <p class="text-center">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
               excepturi?
@@ -134,7 +133,7 @@
         <div class="col-md-2 icons mt-5 marginadjust text-center">
           <img src="/assets/Pagina web-08.png" alt="" />
           <div class="col-8 mt-5 marginadjust">
-            <h6 class="mb-3 text-center">DISEÑO WEB</h6>
+            <h6 class="mb-3 text-center">IDENTIDAD VISUAL</h6>
             <p class="text-center">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
               excepturi?
@@ -144,7 +143,7 @@
         <div class="col-md-2 icons mt-5 marginadjust text-center">
           <img src="/assets/Pagina web-09.png" alt="" />
           <div class="col-8 mt-5 marginadjust">
-            <h6 class="mb-3 text-center">DISEÑO WEB</h6>
+            <h6 class="mb-3 text-center">MANEJO DE REDES</h6>
             <p class="text-center">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
               excepturi?
@@ -156,16 +155,17 @@
     <div class="container-fluid cajamarilla">
       <div class="row">
         <div class="col-12 col-md-6">
-          <div class="col-md-6 divtexto text-center text-md-start ">
-            <h5 class=" cursiva" id="">diseño</h5>
-            <h2 class="grande">Para tu</h2>
-            <h2 class="grande"> proyecto</h2>
-            <p class="fs-6">
-              Una web única, un blog corporativo, una tienda online, unas
-              tarjetas, el diseño de un dossier, un catálogo, un menú, el perfil
-              de facebook, un feed atractivo... tenemos miles de soluciones para
-              hacer que tu proyecto crezca.
+            <div class="col-md-6 divtexto text-center text-md-start mt-3">
+
+            <h2 class="mediano">diseño web para</h2>
+            <h2 class="mediano">atraer nuevos </h2>
+            <h2 class="mediano text-white" id="">CLIENTES</h2>
+            <div class="row">
+              <div class="col-12 mt-3 mr-5">
+               <p class=" text-white text-start">Llevamos a cabo proyectos web que funcionan gracias a un diseño, una progamción perfecta y una comunicación potente.</p>
             </p> <button type="button" class="btn btn-light btn-lg">Ver Mas</button>
+            </div>
+            </div>
           </div>
           </div>
         <div class=" col-12 col-md-6 ">
