--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="row">
             <div class=" col-12 col-md-3 d-flex justify-content-center justify-content-md-start ">
                     <a class="navbar-brand mx-5" href="#home">
-          <img src="/assets/Pagina web-03.png" alt="logo" class="logo" />
+          <img src="assets/Pagina web-03.png" alt="logo" class="logo" />
         </a>
             </div>
             <div class="col-12 col-md-6 d-flex justify-content-center justify-content-sm-center justify-content-md-end ">
@@ -79,7 +79,7 @@
             <h2 class="grande "> proyecto</h2>
             <div class="row">
               <div class="col-12 mt-3 mr-5">
-               <p class=" text-white text-start">
+               <p class=" text-white ">
               Una web única, un blog corporativo, una tienda online, unas
               tarjetas, el diseño de un dossier, un catálogo, un menú, el perfil
               de facebook, un feed atractivo... tenemos miles de soluciones para
@@ -92,7 +92,7 @@
           </div>
           </div>
            <div class="col-12 col-md-5 ">
-          <img src="/assets/Pagina web-11.png" alt="" class="imgmain" />
+          <img src="assets/Pagina web-11.png" alt="" class="imgmain" />
         </div>
         </div>
        
@@ -102,16 +102,16 @@
     <div class="container white">
       <div class="row">
         <div class="col-md-2 icons marginadjust mt-5 text-center">
-          <img src="/assets/Pagina web-05.png" alt="" />
-          <div class="col-8 mt-5 text-center marginadjust">
+          <img src="assets/Pagina web-05.png" alt="" />
+          <div class="col-auto mt-5 text-center marginadjust">
             <h6 class="mb-3 text-center">DISEÑO WEB</h6>
-            <p class="text-center">
+            <p class="text-start textosmall">
              Llevamos a cabo proyectos web que funcionan gracias a un diseño, una progamción perfecta y una comunicación potente.
             </p>
           </div>
         </div>
         <div class="col-md-2 icons mt-5 marginadjust text-center">
-          <img src="/assets/Pagina web-06.png" alt="" />
+          <img src="assets/Pagina web-06.png" alt="" />
           <div class="col-md-8 mt-5 marginadjust">
             <h6 class="mb-3">DISEÑO ESPECIAL</h6>
             <p class="text-center">
@@ -121,7 +121,7 @@
           </div>
         </div>
         <div class="col-md-2 icons mx-auto mt-5 marginadjust text-center">
-          <img src="/assets/Pagina web-07.png" alt="" />
+          <img src="assets/Pagina web-07.png" alt="" />
           <div class="col-8 mt-5 marginadjust">
             <h6 class="mb-3 text-center">DISEÑO LOGOTIPOS</h6>
             <p class="text-center">
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="col-md-2 icons mt-5 marginadjust text-center">
-          <img src="/assets/Pagina web-08.png" alt="" />
+          <img src="assets/Pagina web-08.png" alt="" />
           <div class="col-8 mt-5 marginadjust">
             <h6 class="mb-3 text-center">IDENTIDAD VISUAL</h6>
             <p class="text-center">
@@ -141,7 +141,7 @@
           </div>
         </div>
         <div class="col-md-2 icons mt-5 marginadjust text-center">
-          <img src="/assets/Pagina web-09.png" alt="" />
+          <img src="assets/Pagina web-09.png" alt="" />
           <div class="col-8 mt-5 marginadjust">
             <h6 class="mb-3 text-center">MANEJO DE REDES</h6>
             <p class="text-center">
@@ -169,11 +169,14 @@
           </div>
           </div>
         <div class=" col-12 col-md-6 ">
-          <img src="/assets/Pagina web-12.png" alt="" class="imgmain" />
+          <img src="assets/Pagina web-12.png" alt="" class="imgmain" />
         </div>
       </div>
     </div>
      </main>
+     <section>
+       <div class="container white"></div>
+     </section>
   </body>
  
   
