--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      <main>
         <div class="wave">
           <div class="row">
-            <div class=" col-12 col-md-3 d-flex justify-content-center justify-content-md-start ">
+            <div class=" col-12 col-md-6 d-flex justify-content-center justify-content-md-start ">
                     <a class="navbar-brand mx-5" href="#home">
           <img src="assets/Pagina web-03.png" alt="logo" class="logo" />
         </a>
@@ -54,10 +54,11 @@
                 class="nav-link active text-white fs-5 mx-3"
                 aria-current="page"
                 href="#"
-                >Home</a
+                >Inicio</a
               >
-              <a class="nav-link text-white fs-5 mx-3" href="#">Features</a>
-              <a class="nav-link text-white fs-5 mx-3" href="#">Pricing</a>
+              <a class="nav-link text-white fs-5 mx-3" href="#">Nosotros</a>
+              <a class="nav-link text-white fs-5 mx-3" href="#">Servicios</a>
+              <a class="nav-link text-white fs-5 mx-3" href="#">Contacto</a>
             </div>
           </div>
       
@@ -66,9 +67,9 @@
             </div>
           </div>
         
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"  preserveAspectRatio="none">
   <path fill="#fdc400" fill-opacity="1" d="M0,64L60,101.3C120,139,240,213,360,256C480,299,600,309,720,288C840,267,960,213,1080,176C1200,139,1320,117,1380,106.7L1440,96L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
-</svg>
+</svg> 
     </div>
     <div class="container-fluid cajamarilla">
       <div class="row">
@@ -112,7 +113,7 @@
         </div>
         <div class="col-md-2 icons mt-5 marginadjust text-center">
           <img src="assets/Pagina web-06.png" alt="" />
-          <div class="col-md-8 mt-5 marginadjust">
+          <div class="col-auto mt-5 marginadjust">
             <h6 class="mb-3">DISEÑO ESPECIAL</h6>
             <p class="text-center">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
@@ -122,7 +123,7 @@
         </div>
         <div class="col-md-2 icons mx-auto mt-5 marginadjust text-center">
           <img src="assets/Pagina web-07.png" alt="" />
-          <div class="col-8 mt-5 marginadjust">
+          <div class="col-auto mt-5 marginadjust">
             <h6 class="mb-3 text-center">DISEÑO LOGOTIPOS</h6>
             <p class="text-center">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
@@ -132,7 +133,7 @@
         </div>
         <div class="col-md-2 icons mt-5 marginadjust text-center">
           <img src="assets/Pagina web-08.png" alt="" />
-          <div class="col-8 mt-5 marginadjust">
+          <div class="col-auto mt-5 marginadjust">
             <h6 class="mb-3 text-center">IDENTIDAD VISUAL</h6>
             <p class="text-center">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
@@ -142,7 +143,7 @@
         </div>
         <div class="col-md-2 icons mt-5 marginadjust text-center">
           <img src="assets/Pagina web-09.png" alt="" />
-          <div class="col-8 mt-5 marginadjust">
+          <div class="col-auto mt-5 marginadjust">
             <h6 class="mb-3 text-center">MANEJO DE REDES</h6>
             <p class="text-center">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
