--- a/index.html
+++ b/index.html
@@ -50,14 +50,9 @@
             id="navbarNavAltMarkup"
           >
             <div class="navbar-nav">
-              <a
-                class="nav-link active text-white fs-5 mx-3"
-                aria-current="page"
-                href="#"
-                >Inicio</a
-              >
+             
               <a class="nav-link text-white fs-5 mx-3" href="#">Nosotros</a>
-              <a class="nav-link text-white fs-5 mx-3" href="#">Servicios</a>
+              <a class="nav-link text-white fs-5 mx-3" href="servicios.html">Servicios</a>
               <a class="nav-link text-white fs-5 mx-3" href="#">Contacto</a>
             </div>
           </div>
