--- a/servicios.html
+++ b/servicios.html
@@ -35,7 +35,7 @@
               justify-content-center justify-content-md-start
             "
           >
-            <a class="navbar-brand mx-5" href="#home">
+            <a class="navbar-brand mx-5" href="index.html">
               <img src="assets/Pagina web-03.png" alt="logo" class="logo" />
             </a>
           </div>
@@ -75,7 +75,7 @@
 
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 1440 320"
+          viewBox="0 0 1440 319"
           preserveAspectRatio="none"
         >
           <path
@@ -86,11 +86,11 @@
         </svg>
       </div>
       <div class="container-fluid cajablanca">
-        <div class="container mt-5">
-<div class="row">
-  <div class="col-2"></div>
-        <div class="col-md-3">
-          <div class="card border-light shadow-lg rounded" style="width: 18rem;">
+        <div class="container mt-5 ">
+<div class="row mx-auto">
+ 
+        <div class="col-sm-12 col-md-3 mb-5 mx-auto">
+          <div class="card border-light shadow-lg rounded" style="width: 16rem;">
   <img src="assets/trabajo1.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
@@ -99,8 +99,8 @@
   </div>
 </div>
         </div>
-            <div class="col-md-3">
-          <div class="card border-light shadow-lg rounded" style="width: 18rem;">
+            <div class="col-sm-12 col-md-3 mb-5 mx-auto">
+          <div class="card border-light shadow-lg rounded" style="width: 16rem;">
   <img src="assets/trabajo2.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
@@ -109,8 +109,8 @@
   </div>
 </div>
         </div>
-            <div class="col-md-3 mb-5">
-          <div class="card border-light shadow-lg rounded" style="width: 18rem;">
+            <div class="col-sm-12 col-md-3 mb-5 mx-auto">
+          <div class="card border-light shadow-lg rounded" style="width: 16rem;">
   <img src="assets/trabajo3.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
