--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="wave">
           <div class="row">
             <div class=" col-12 col-md-6 d-flex justify-content-center justify-content-md-start ">
-                    <a class="navbar-brand mx-5" href="#home">
+                    <a class="navbar-brand mx-5" href="index.html">
           <img src="assets/Pagina web-03.png" alt="logo" class="logo" />
         </a>
             </div>
