--- a/servicios.html
+++ b/servicios.html
@@ -85,12 +85,14 @@
           ></path>
         </svg>
       </div>
-      <div class="container-fluid cajablanca">
-        <div class="container mt-5 ">
-<div class="row mx-auto">
+      <div class="container cajablanca">
+        <div class="container cajablanca mt-5 ">
+          <div class="row justify-content-center">
+            <div class="col-12 col-md-10 ">
+              <div class="row justify-content-around">
  
-        <div class="col-sm-12 col-md-3 mb-5 mx-auto">
-          <div class="card border-light shadow-lg rounded" style="width: 16rem;">
+        <div class="col-12 col-md-3 mb-5 ">
+          <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
   <img src="assets/trabajo1.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
@@ -99,8 +101,8 @@
   </div>
 </div>
         </div>
-            <div class="col-sm-12 col-md-3 mb-5 mx-auto">
-          <div class="card border-light shadow-lg rounded" style="width: 16rem;">
+            <div class="col-12 col-md-3 mb-5">
+          <div class="card border-light shadow-lg rounded" style="width: 15rem;">
   <img src="assets/trabajo2.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
@@ -109,8 +111,8 @@
   </div>
 </div>
         </div>
-            <div class="col-sm-12 col-md-3 mb-5 mx-auto">
-          <div class="card border-light shadow-lg rounded" style="width: 16rem;">
+            <div class="col-12 col-md-3 mb-5">
+          <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
   <img src="assets/trabajo3.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
@@ -120,6 +122,9 @@
 </div>
         </div>
             </div>
+            </div>
+          </div>
+
         </div>
         
         
