--- a/servicios.html
+++ b/servicios.html
@@ -91,9 +91,9 @@
             <div class="col-12 col-md-10 ">
               <div class="row justify-content-around">
  
-        <div class="col-12 col-md-3 mb-5 ">
+             <div class="col-12 col-md-3 mb-5">
           <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
-  <img src="assets/trabajo1.png" class="card-img-top" alt="...">
+  <img src="png/png39.png" class="card-img-top mb-3 mt-3" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -103,7 +103,7 @@
         </div>
             <div class="col-12 col-md-3 mb-5">
           <div class="card border-light shadow-lg rounded" style="width: 15rem;">
-  <img src="assets/trabajo2.png" class="card-img-top" alt="...">
+  <img src="png/png40.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -113,7 +113,7 @@
         </div>
             <div class="col-12 col-md-3 mb-5">
           <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
-  <img src="assets/trabajo3.png" class="card-img-top" alt="...">
+  <img src="png/png41.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
