--- a/index.html
+++ b/index.html
@@ -198,15 +198,17 @@
        </div>
      </section>
      <footer>
-       <div class="row justify-content-between">
-         <div class="col-md-4">
-<p>Mas diseño, web design, redes sociales, logos y presencia online integral</p>
+       <div class="container">
+          <div class="row justify-content-between text-center">
+         <div class="col-md-4 text-md-start">
+          <p class="text-muted">Mas diseño, web design, redes sociales, logos y presencia online integral</p>
          </div>
-           <div class="col-md-4">
-           <i class="fab fa-instagram fa-2x"></i>
-           <i class="fab fa-facebook-square fa-2x"></i>
+           <div class="col-md-4 text-md-end">
+          <a href="https://www.instagram.com/masdisseno/" class="mx-2 text-dark"><i class="fab fa-instagram fa-2x"></i></a> 
+          <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344" class="mx-2 text-dark"><i class="fab fa-facebook-square fa-2x"></i></a> 
          </div>
        </div>
+       </div>  
      </footer>
 
     <script
