--- a/index.html
+++ b/index.html
@@ -25,27 +25,28 @@
   <body id="home">
      <main>
         <div class="wave">
-          <nav class="navbar navbar-expand-md navbar-light  ">
-  <div class="container-fluid ">
-               <a class="navbar-brand mx-5" href="index.html">
-          <img src="assets/Pagina web-03.png" alt="logo" class="logo" />
-        </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <nav class="navbar navbar-expand-md navbar-light ">
+  <div class="container ">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav  ml-auto">
+        <a class="navbar-brand mx-auto" href="index.html">
+          <img src="assets/Pagina web-03.png" alt="logo" class="logo" />
+        </a>
+  
+    <div class="collapse navbar-collapse justify-content-md-end" id="navbarNav">
+      <ul class="navbar-nav  ">
         <li class="nav-item">
           <a class="nav-link text-white" aria-current="page" href="#">Nosotros</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Servicios</a>
+          <a class="nav-link text-white" href="servicios.html">Servicios</a>
         </li>
         <li class="nav-item ">
-          <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344" class="mx-2 text-white"><i class="fab fa-facebook-square fa-2x"></i></a> 
+          <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344" class="mx-2 text-white my-auto"><i class="fab fa-facebook-square fa-2x"></i></a> 
         </li>
         <li class="nav-item ">
-          <a href="https://www.instagram.com/masdisseno/" class="mx-2 text-white"><i class="fab fa-instagram fa-2x"></i></a> 
+          <a href="https://www.instagram.com/masdisseno/" class="mx-2 text-white my-auto"><i class="fab fa-instagram fa-2x"></i></a> 
         </li>
       </ul>
     </div>
@@ -139,11 +140,11 @@
             <h2 class="mediano my-2">atraer nuevos </h2>
             <h2 class="mediano text-white my-3" id="">CLIENTES</h2>
           </div>
-          <div class="col-10 mx-3">
+          <div class="col-10 mx-3 my-3">
           
             <div class="row justify-content-center justify-content-lg-end">
-              <div class="col-md-3 ">
-                <button type="button" class="btn btn-sm btn-light ">Ver Mas</button>
+              <div class="col-md-6">
+                <button type="button" class="btn btn-lg btn-light ">Ver Mas</button>
               </div>
             </div>
           </div>
