--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
   
     <div class="collapse navbar-collapse justify-content-md-end" id="navbarNav">
       <ul class="navbar-nav  ">
-        <li class="nav-item">
-          <a class="nav-link text-white" aria-current="page" href="#">Nosotros</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="servicios.html">Servicios</a>
+        <li class="nav-item ">
+          <a class="nav-link text-white h6" aria-current="page" href="#">Nosotros</a>
         </li>
         <li class="nav-item ">
-          <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344" class="mx-2 text-white my-auto"><i class="fab fa-facebook-square fa-2x"></i></a> 
+          <a class="nav-link text-white h6" href="servicios.html">Servicios</a>
+        </li>
+        <li class="nav-item ">
+          <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344" class="mx-2 text-white my-auto "><i class="fab fa-facebook-square fa-2x"></i></a> 
         </li>
         <li class="nav-item ">
           <a href="https://www.instagram.com/masdisseno/" class="mx-2 text-white my-auto"><i class="fab fa-instagram fa-2x"></i></a> 
@@ -66,7 +66,7 @@
             <h2 class="grande my-3" id="blanco">Para tu</h2>
             <h2 class="grande my-3"> proyecto</h2>
               <div class="col-auto col-lg-9 ">
-              <p class="text-white  lh-lg mt-3 text-justify">
+              <p class="text-white  lh-lg mt-3 text-start">
               Una web única   , un blog corporativo, una tienda online, unas
               tarjetas, el diseño de un dossier, un catálogo, un menú, el perfil
               de facebook, un feed atractivo... tenemos miles de soluciones para
