--- a/servicios.html
+++ b/servicios.html
@@ -22,56 +22,39 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <title>masdiseño</title>
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <title>masdiseño/servicios</title>
   </head>
   <body>
     <main>
       <div class="wave">
-        <div class="row">
-          <div
-            class="
-              col-12 col-md-6
-              d-flex
-              justify-content-center justify-content-md-start
-            "
-          >
-            <a class="navbar-brand mx-5" href="index.html">
-              <img src="assets/Pagina web-03.png" alt="logo" class="logo" />
-            </a>
-          </div>
-          <div
-            class="
-              col-12 col-md-6
-              d-flex
-              justify-content-center
-              justify-content-sm-center
-              justify-content-md-end
-            "
-          >
-            <nav class="navbar navbar-expand-lg navbar-light">
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link text-white fs-5 mx-3" href="#">Nosotros</a>
-                  <a class="nav-link text-white fs-5 mx-3" href="#"
-                    >Servicios</a
-                  >
-                  <a class="nav-link text-white fs-5 mx-3" href="#">Contacto</a>
-                </div>
-              </div>
-            </nav>
-          </div>
-        </div>
+         <nav class="navbar navbar-expand-md navbar-light ">
+  <div class="container ">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+        <a class="navbar-brand mx-auto" href="index.html">
+          <img src="assets/Pagina web-03.png" alt="logo" class="logo" />
+        </a>
+  
+    <div class="collapse navbar-collapse justify-content-md-end" id="navbarNav">
+      <ul class="navbar-nav  ">
+        <li class="nav-item ">
+          <a class="nav-link text-white h6" aria-current="page" href="#">Nosotros</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link text-white h6" href="servicios.html">Servicios</a>
+        </li>
+        <li class="nav-item ">
+          <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344" class="mx-2 text-white my-auto "><i class="fab fa-facebook-square fa-2x"></i></a> 
+        </li>
+        <li class="nav-item ">
+          <a href="https://www.instagram.com/masdisseno/" class="mx-2 text-white my-auto"><i class="fab fa-instagram fa-2x"></i></a> 
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -95,8 +78,8 @@
           <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
   <img src="png/png39.png" class="card-img-top mb-3 mt-3" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h5 class="card-title">Diseño Grafico</h5>
+    <p class="card-text">Diseñamos un logotipo creativo y funcional para tu empresa, creando personalidad y presencia</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
@@ -139,8 +122,8 @@
           <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
   <img src="png/png39.png" class="card-img-top mb-3 mt-3" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h5 class="card-title">Diseño Grafico</h5>
+    <p class="card-text">Diseñamos un logotipo creativo y funcional para tu empresa, creando personalidad y presencia</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
