--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <li class="nav-item ">
           <a class="nav-link  h6 text-white" href="servicios.html">Servicios</a>
         </li>
+         <li class="nav-item ">
+          <a class="nav-link  h6 text-white" href="contacto.html">Contacto</a>
+        </li>
         <li class="nav-item ">
           <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344" class="mx-2  my-auto text-white " target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a> 
         </li>
@@ -61,7 +64,7 @@
       <div class="container mt-5">
         <div class="row">
         <div class="col-11 col-lg-5 mt-5 text-start ">
-          <h5 class=" cursiva mb-3 mt-3" id="">diseño</h5>
+          <h5 class=" cursiva mb-3 mt-5" id="">diseño</h5>
             <h2 class="grande my-3" id="blanco">Para tu</h2>
             <h2 class="grande my-3"> proyecto</h2>
               <div class="col-auto col-lg-9 ">
@@ -140,7 +143,7 @@
             <h2 class="mediano my-2">atraer nuevos </h2>
             <h2 class="mediano text-white my-3" id="">CLIENTES</h2>
           </div>
-          <div class="col-md-4 text-center">
+          <div class="col-md-4 text-end mt-3">
                <a href="contacto.html"><button type="button" class="btn  btn-light ">VER MAS</button></a>
                 
               </div>
@@ -161,13 +164,13 @@
          <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="assets/notebook-1_Mesa de trabajo 1-02.png" class="d-block w-100 h-75 img-fluid" alt="...">
+      <img src="assets/notebook-1_Mesa de trabajo 1-02.png" class="d-block w-100  img-fluid carrouselimg" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/design-1_Mesa de trabajo 1-07.png" class="d-block w-100 h-75 img-fluid" alt="...">
+      <img src="assets/design-1_Mesa de trabajo 1-07.png" class="d-block w-100  img-fluid carrouselimg" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/notebook-1_Mesa de trabajo 1-01.png" class="d-block w-100 h-75 img-fluid" alt="...">
+      <img src="assets/notebook-1_Mesa de trabajo 1-01.png" class="d-block w-100  img-fluid carrouselimg" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
