--- a/servicios.html
+++ b/servicios.html
@@ -43,6 +43,9 @@
         <li class="nav-item ">
           <a class="nav-link  h6 text-white" href="servicios.html">Servicios</a>
         </li>
+         <li class="nav-item ">
+          <a class="nav-link  h6 text-white" href="contacto.html">Contacto</a>
+        </li>
         <li class="nav-item ">
           <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344" class="mx-2  my-auto text-white " target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a> 
         </li>
