--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
         <li class="nav-item ">
           <a class="nav-link  h6 text-white" href="servicios.html">Servicios</a>
         </li>
-         <li class="nav-item ">
-          <a class="nav-link  h6 text-white" href="contacto.html">Contacto</a>
-        </li>
+        
         <li class="nav-item ">
           <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344" class="mx-2  my-auto text-white " target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a> 
         </li>
@@ -76,7 +74,7 @@
             </p> 
             <div class="row justify-content-start">
               <div class="col-md-4 mt-3">
-                <a href="contacto.html"><button type="button" class="btn  btn-light ">VER MAS</button></a>
+                <a href="#"><button type="button" class="btn  btn-light ">VER MAS</button></a>
                 
               </div>
             </div>
@@ -160,7 +158,7 @@
     </div>
      </main>
      <section>
-       <div class="container-fluid">
+       <div class="col-auto">
          <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
