--- a/servicios.html
+++ b/servicios.html
@@ -30,7 +30,7 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-         <a class="navbar-brand mx-auto" href="index.html">
+         <a class="navbar-brand mx-auto hvr-pulse-grow" href="index.html">
           <img src="assets/Pagina web-03.png" alt="logo" class="logo" />
         </a>
         
@@ -38,19 +38,19 @@
     <div class="collapse navbar-collapse justify-content-md-end" id="navbarNav">
       <ul class="navbar-nav  ">
         <li class="nav-item ">
-          <a class="nav-link  h6 text-white" aria-current="page" href="#">Nosotros</a>
+          <a class="nav-link  h6 text-white hvr-pulse-grow" aria-current="page" href="#">Nosotros</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link  h6 text-white" href="servicios.html">Servicios</a>
+          <a class="nav-link  h6 text-white hvr-pulse-grow" href="servicios.html">Servicios</a>
         </li>
          <li class="nav-item ">
-          <a class="nav-link  h6 text-white" href="contacto.html">Contacto</a>
+          <a class="nav-link  h6 text-white hvr-pulse-grow" href="contacto.html">Contacto</a>
         </li>
         <li class="nav-item ">
-          <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344" class="mx-2  my-auto text-white " target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a> 
+          <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344" class="mx-2  my-auto text-white  hvr-pulse-grow" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a> 
         </li>
         <li class="nav-item ">
-          <a href="https://www.instagram.com/masdisseno/" class="mx-2  my-auto text-white" target="_blank"><i class="fab fa-instagram fa-2x"></i></a> 
+          <a href="https://www.instagram.com/masdisseno/" class="mx-2  my-auto text-white  hvr-pulse-grow" target="_blank"><i class="fab fa-instagram fa-2x"></i></a> 
         </li>
       </ul>
     </div>
@@ -160,8 +160,8 @@
           <p class="text-muted">Mas diseño, web design, redes sociales, logos y presencia online integral</p>
          </div>
            <div class="col-md-4 text-md-end">
-          <a href="https://www.instagram.com/masdisseno/" class="mx-2 text-dark" target="_blank"><i class="fab fa-instagram fa-2x"></i></a> 
-          <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344" class="mx-2 text-dark" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a> 
+          <a href="https://www.instagram.com/masdisseno/" class="mx-2 text-dark hvr-pulse-grow" target="_blank"><i class="fab fa-instagram fa-2x"></i></a> 
+          <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344" class="mx-2 text-dark hvr-pulse-grow" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a> 
          </div>
        </div>
        </div>  
