sin navbar fixed

--- a/servicios.html
+++ b/servicios.html
@@ -168,9 +168,9 @@
        <div class="container my-4">
           <div class="row justify-content-between text-center">
          <div class="col-md-4 text-md-start">
-          <p class="text-muted">Mas diseño, web design, redes sociales, logos y presencia online integral</p>
+          <p class="text-muted my-5">Mas diseño, web design, redes sociales, logos y presencia online integral</p>
          </div>
-           <div class="col-md-4 text-md-end">
+           <div class="col-md-4 text-md-end my-5">
           <a href="https://www.instagram.com/masdisseno/" class="mx-2 text-dark hvr-pulse-grow" target="_blank"><i class="fab fa-instagram fa-2x"></i></a> 
           <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344" class="mx-2 text-dark hvr-pulse-grow" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a> 
          </div>
