--- a/servicios.html
+++ b/servicios.html
@@ -41,7 +41,7 @@
           <a class="nav-link  h6 text-white hvr-pulse-grow" aria-current="page" href="index.html">Inicio</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link  h6 text-white hvr-pulse-grow" aria-current="page" href="#">Nosotros</a>
+          <a class="nav-link  h6 text-white hvr-pulse-grow" aria-current="page" href="nosotros.html">Nosotros</a>
         </li>
         <li class="nav-item ">
           <a class="nav-link  h6 text-white hvr-pulse-grow" href="servicios.html">Servicios</a>
