--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <a class="nav-link  h6 text-white hvr-pulse-grow" aria-current="index.html" href="#">Inicio</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link  h6 text-white hvr-pulse-grow" aria-current="page" href="#">Nosotros</a>
+          <a class="nav-link  h6 text-white hvr-pulse-grow" aria-current="nosotros.html" href="#">Nosotros</a>
         </li>
         
         <li class="nav-item ">
