--- a/nosotros.html
+++ b/nosotros.html
@@ -102,7 +102,15 @@
       </nav>
     </div>
     <div class="container-fluid cajamarilla">
-      <h5 class="cursiva mb-3 mt-5" id="">diseño</h5>
+      <div class="col-md-6 m-auto">
+        <h5 class="cursiva mb-3 mt-5 mb-5" id="">Nosotros</h5>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos eum
+          vitae perspiciatis nisi unde quis molestias delectus sunt, laborum,
+          amet cupiditate aut voluptatum eius molestiae tenetur, reiciendis
+          aliquam sint necessitatibus?
+        </p>
+      </div>
     </div>
     <footer>
       <div class="container mt-5">
